# IVANNA-OMEGA-SUPREME

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  DEPLOYMENT_INSTRUCTIONS.md  EXECUTIVE_SUMMARY.md  FINAL_WORK_SUMMARY.md  FIX_SUMMARY_20260705.md  IVANNA_ARCHITECTURE_DECISION_REPORT.md  NEXT_STEPS.md  PUSH_STATUS_REPORT.md  README.md  RELEASE_NOTES.md  UNIFIED_ENGINE_IMPLEMENTATION.md  VOLTERRA_HRTF_FIXES.md  apply_fixes3.py  apply_hrtf.py  apply_ui_mode3.py  control_frame.hpp  customize.sh  fix_build_ivanna.sh  gradle.properties  hrtf_convolver.cpp  ivanna_fix.patch  ivanna_fix2.patch  ivanna_fix3.patch  libomega_effect.so.fixed  libomega_effect.so.fixed2  module.prop  post-fs-data.sh  push_to_github.sh  service.sh  settings.gradle.kts  uninstall.sh  update.json
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README_MODEL.txt  YAMNET_README.md
app/src/main/assets/shaders/: circular_spectrum.glsl  wallpaper_v2.glsl  wave_particles.glsl
app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak  adaptive_engine_core.hpp  anti_dolby.cpp  anti_dolby.h  audio_control_plane.cpp  audio_control_plane.hpp  audio_orchestrator.cpp  control_frame.hpp  evolutionary_kernel.cpp  ivanna_jni_unified.cpp  ivanna_unified_engine.cpp  ivanna_unified_engine.hpp  omega_daemon.cpp  omega_effect.cpp  pd_engine.hpp  perceptual_loudness.hpp  phase_oracle.cpp  phase_oracle_engine.hpp  phase_oracle_refinements.hpp  pi_lstm_bridge_jni.cpp  shm_hyperplane.cpp  system_audio_capture.cpp  usb_audio_pro_manager.cpp
app/src/main/cpp/core/dsp/: Compressor.cpp  ConsistentTDF2.hpp  HarmonicExciter.cpp  ParametricEQ.cpp
app/src/main/cpp/daemon/: CMakeLists.txt  ivanna_daemon.cpp
app/src/main/cpp/dsp/: Compressor.cpp  GainStage.cpp  HarmonicExciter.cpp  ParametricEQ.cpp  SafetyLimiter.cpp  StereoWidener.cpp
app/src/main/cpp/experimental/adaptive_engine/: FASE3_REPORT.md  README.md  adaptive_decision_engine.cpp  adaptive_decision_engine.hpp
app/src/main/cpp/experimental/adaptive_engine/tests/: test_adaptive_engine.cpp  test_close_loop.cpp  test_dsp_chain.cpp  test_stability.cpp
app/src/main/cpp/hexagon/: hexagon_dsp_integration.cpp  hexagon_dsp_integration.hpp  ivanna_dsp.cpp  ivanna_dsp.hpp  ivanna_dsp.idl  ivanna_dsp_impl.cpp  ivanna_fastrpc_client.cpp  ivanna_fastrpc_client.hpp  ivanna_fastrpc_client.idl
app/src/main/cpp/include/: Compressor.h  GainStage.h  HarmonicExciter.h  ParametricEQ.h  SafetyLimiter.h  StereoWidener.h  anti_dolby.h  audio_bus.h  audio_effect_compat.h  audio_thread_priority.h  dsp_types.h  hrtf_lut.h  omega_shared.h  volterra_h2_symmetric.hpp
app/src/main/cpp/ivannalab/: ivannalab.cpp  ivannalab.h
app/src/main/cpp/jni/: ivanna_adaptive_jni.cpp  ivanna_jni_stub.cpp  ivanna_npe_jni.cpp  ivanna_omega_jni.cpp  ivanna_spatial_jni.cpp  ivanna_visualizer_jni.cpp  ivanna_visualizer_v2_jni.cpp  omega_vibratory_stub.cpp
app/src/main/cpp/legacy_backup/: evolutionary_kernel.cpp  omega_effect.cpp  usb_audio_pro_manager.cpp
app/src/main/cpp/neuromorphic/: acoustic_synthesis_core.hpp  autonomous_brain.hpp  fir_upsampler_engine.hpp  ivanna_neural_upmixer.cpp  ivanna_neural_upmixer.hpp  ivanna_npe_engine.cpp  ivanna_synthesizer.hpp  lif_neuron_pool.hpp  neuro_cochlear_manifold.cpp  neuro_cochlear_manifold.hpp  pi_lstm_milenio.hpp  synthesizer.hpp  volterra_h2_symmetric.cpp  volterra_h2_symmetric.hpp
app/src/main/cpp/spatial/: cue_based_spatial.hpp  hrtf_convolver.cpp  hrtf_convolver.hpp  ivanna_head_tracker.cpp  ivanna_head_tracker.hpp  ivanna_object_renderer.cpp  ivanna_object_renderer.hpp  room_model.cpp  room_model.h  spatial_engine.cpp  spatial_engine.h  spatial_jni.cpp  synthetic_hrtf.hpp
app/src/main/cpp/tests/: CMakeLists.txt  README.md  dsp_core_stability.cpp  harmonic_exciter_stability.cpp  test_audio_bus.cpp  test_control_frame_bus_stress.cpp  test_regression_tuning.cpp
app/src/main/cpp/visualizer/: gammatone_filterbank13.hpp  gammatone_lattice.hpp  gl_uniform_bridge.hpp  gl_uniform_bridge_v2.hpp
app/src/main/java/com/ivanna/omega/: MainActivity.kt  ProfileManagerIntegrationExample.kt  VoiceController.kt
app/src/main/java/com/ivanna/omega/adaptive/: AdaptiveEngineScreen.kt  AdaptiveTelemetrySnapshot.kt  AdaptiveViewModel.kt
app/src/main/java/com/ivanna/omega/ai/: AIInferenceEngine.kt  AdaptiveLearning.kt  LearningBias.kt  ModelManager.kt  RealtimeLearningController.kt  SpectralClassifier.kt  YamnetClassifier.kt
app/src/main/java/com/ivanna/omega/audio/: AdaptiveBackend.kt  AdaptiveEngineModulator.kt  AntiDolbyController.kt  AppMetadataListener.kt  AudioCallbackManager.kt  AudioEngine.kt  AudioForegroundService.kt  AudioParameterManager.kt  AudioPipeline.kt  AudioResampler.kt  AudioRouteManager.kt  AudioRoutingManager.kt  AudioSessionReceiver.kt  AudioStateManager.kt  DspStateUpdater.kt  INTEGRATION_GUIDE.md  IvannaBridgePlayer.kt  IvannaConstants.kt  IvannaGlobalEffectManager.kt  NoRootAudioProcessor.kt  OmegaMetrics.kt  ParameterStore.kt  PlaybackCaptureService.kt  ProfileManager.kt  ProfilesLoader.kt  SpatialAudioEngineV2.kt  StereoAudioResampler.kt  SystemAudioCapture.kt  UsbAudioProManager.kt  VoiceProtectionController.kt  VoiceProtectionManager.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/raw/: audio_profiles.json
app/src/main/res/values/: themes.xml
archive/: README.md  ualizer-freeze-fir-blackman-aurora.patch
docs/: ANTI_DOLBY_INTEGRATION_GUIDE.md  AudioThreadSafetyReport.md  FASE1_MAPA_CONOCIMIENTO_ACUSTICO.md  IVANNA_PLACEBO_AUDIT_REPORT.md  README.md  SYSTEM_AUDIO_CAPTURE_AUDIT.md
docs/archive/: README.md  customize.sh.root_stray  service.sh.v1.5
experimental/system_capture/: README.md
gradle/wrapper/: gradle-wrapper.properties
magisk_module/: concert_mode.sh  customize.sh  ivanna_control.sh  module.prop  mqa_monitor.sh  post-fs-data.sh  service.sh  uninstall.sh
magisk_module/system/etc/: audio_effects_ivanna.xml  audio_effects_ivanna_omega.xml
magisk_module/vendor_base/: sku_blair_audio_effects.xml
sepolicy/: sepolicy.rule
(+51 files in other folders)
